--- a/command/Cargo.toml
+++ b/command/Cargo.toml
@@ -28,3 +28,4 @@ world = "app"
 
 [package.metadata.component.target.dependencies]
 "docs:adder" = { path = "../adder/wit/adder.wit" }
+"docs:subtractor" = { path = "../subtractor/wit/subtractor.wit" }
