--- a/command/Cargo.toml
+++ b/command/Cargo.toml
@@ -29,3 +29,4 @@ world = "app"
 [package.metadata.component.target.dependencies]
 "docs:adder" = { path = "../adder/wit/adder.wit" }
 "docs:subtractor" = { path = "../subtractor/wit/subtractor.wit" }
+"docs:multiplier" = { path = "../multiplier/wit/multiplier.wit" }
