--- a/calculator/Cargo.toml
+++ b/calculator/Cargo.toml
@@ -28,6 +28,7 @@ package = "docs:calculator"
 "docs:adder" = { path = "../adder/wit/adder.wit" }
 "docs:subtractor" = { path = "../subtractor/wit/subtractor.wit" }
 "docs:multiplier" = { path = "../multiplier/wit/multiplier.wit" }
+"docs:divider" = { path = "../divider/wit/divider.wit" }
 
 
 [package.metadata.component.dependencies]
