--- a/command/Cargo.toml
+++ b/command/Cargo.toml
@@ -30,3 +30,4 @@ world = "app"
 "docs:adder" = { path = "../adder/wit/adder.wit" }
 "docs:subtractor" = { path = "../subtractor/wit/subtractor.wit" }
 "docs:multiplier" = { path = "../multiplier/wit/multiplier.wit" }
+"docs:divider" = { path = "../divider/wit/divider.wit" }
