--- a/calculator/Cargo.toml
+++ b/calculator/Cargo.toml
@@ -29,6 +29,7 @@ package = "docs:calculator"
 "docs:subtractor" = { path = "../subtractor/wit/subtractor.wit" }
 "docs:multiplier" = { path = "../multiplier/wit/multiplier.wit" }
 "docs:divider" = { path = "../divider/wit/divider.wit" }
+"docs:divider-jco" = { path = "../divider-jco/wit/divider-jco.wit" }
 
 
 [package.metadata.component.dependencies]
